[package]
name = "f103c8t6"

version.workspace = true
edition.workspace = true
publish.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies]


defmt.workspace            = true
defmt-rtt.workspace        = true
panic-probe.workspace      = true
toml-cfg.workspace         = true
cortex-m.workspace         = true
cortex-m-rt.workspace      = true
embassy-executor.workspace = true
embassy-time.workspace     = true
embassy-sync.workspace     = true
embedded-io.workspace      = true


embassy-stm32 = { workspace = true, features = ["stm32f103c8"] }
