[package]
name = "f401rct6"

version.workspace = true
edition.workspace = true
publish.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies]
pid = "4.1"

arraydeque = { version = "0.5", default-features = false }


defmt.workspace            = true
defmt-rtt.workspace        = true
panic-probe.workspace      = true
toml-cfg.workspace         = true
cortex-m.workspace         = true
cortex-m-rt.workspace      = true
embassy-executor.workspace = true
embassy-time.workspace     = true
embassy-sync.workspace     = true
embedded-io.workspace      = true
embassy-stm32.workspace    = true
