[workspace]
package.version = "0.0.0"
package.edition = "2024"
package.publish = false
package.authors = ["Salfa <me@salfa.cc>"]
default-members = []

resolver = "3"
members  = ["*"]

exclude = [".cargo", ".git", "target"]


[workspace.dependencies.embassy-stm32]
version = "0.2"
### Only chips of the same model can be used at the same time
features = ["defmt", "memory-x", "time-driver-any", "stm32f407ig"]


[workspace.dependencies]
defmt        = "1.0"
defmt-rtt    = "1.0"
embassy-sync = "0.6"
static_cell  = "2.1"

embedded-io  = { version = "0.6", features = ["defmt-03"] }
panic-probe  = { version = "1.0", features = ["print-defmt"] }
cortex-m-rt  = { version = "0.7", features = ["device"] }
embassy-time = { version = "0.4", features = ["tick-hz-32_768"] }

[workspace.dependencies.cortex-m]
version  = "0.7"
features = ["critical-section-single-core", "linker-plugin-lto"]
[workspace.dependencies.embassy-executor]
version  = "0.7"
features = ["arch-cortex-m", "executor-thread"]


[profile]
release.debug = true
release.lto   = true

[profile.dev.package]
cortex-m.opt-level         = 3
cortex-m-rt.opt-level      = 3
embassy-executor.opt-level = 3
embassy-time.opt-level     = 3
embassy-stm32.opt-level    = 3
