[package]
name = "h723vgt6"

version.workspace = true
edition.workspace = true
publish.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies]
arraydeque = { version = "0.5", default-features = false }


defmt.workspace            = true
defmt-rtt.workspace        = true
panic-probe.workspace      = true
toml-cfg.workspace         = true
cortex-m.workspace         = true
cortex-m-rt.workspace      = true
embassy-executor.workspace = true
embassy-time.workspace     = true
embassy-sync.workspace     = true
embedded-io.workspace      = true

embassy-stm32 = { workspace = true, features = ["stm32h723vg"] }
